plugins {
	id 'java'
	id 'jacoco'
	id 'pmd'
	id 'info.solidsoft.pitest' version '1.19.0'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.genericclient.GenericClientLauncher'
def denseMainClass = 'com.genericclient.GenericClientDenseLauncher'

configurations {
	standaloneRuntime
}

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
	implementation 'party.iroiro.luajava:lua54:4.1.0'
	runtimeOnly 'party.iroiro.luajava:lua54-platform:4.1.0:natives-desktop'
	standaloneRuntime group: 'net.runelite', name:'client', version: runeLiteVersion
	standaloneRuntime group: 'net.runelite', name:'jshell', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.13.2'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'com.genericclient'

sourceSets {
	routeAudit {
		compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
		runtimeClasspath += output + compileClasspath
	}
}

def routeAuditFile = layout.buildDirectory.file('route-audit/routes.tsv')
tasks.register('exportRoutes', Exec) {
	workingDir providers.gradleProperty('scriptCatalog').getOrElse('../GenericClientScripts')
	doFirst { routeAuditFile.get().asFile.parentFile.mkdirs() }
	commandLine 'lua5.4', 'tools/export-routes.lua', routeAuditFile.get().asFile.absolutePath
}

tasks.register('routeAudit', JavaExec) {
	group = 'verification'
	description = 'Plan the Lua catalog routes against bundled navigation data.'
	dependsOn 'classes', 'routeAuditClasses', 'exportRoutes'
	classpath = sourceSets.routeAudit.runtimeClasspath
	mainClass = 'com.genericclient.GenericClientRouteAudit'
	args routeAuditFile.get().asFile.absolutePath
}

tasks.register('scriptCatalogAudit', JavaExec) {
	group = 'verification'
	description = 'Load every external script descriptor with the client registry and native Lua VM.'
	dependsOn 'testClasses'
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.genericclient.GenericClientScriptCatalogAudit'
	args file(providers.gradleProperty('scriptCatalog').getOrElse('../GenericClientScripts')).absolutePath
}

tasks.register('plannerBenchmark', JavaExec) {
	group = 'verification'
	description = 'Measure deterministic offline planner latency and allocation.'
	dependsOn 'classes', 'routeAuditClasses'
	classpath = sourceSets.routeAudit.runtimeClasspath
	mainClass = 'com.genericclient.GenericClientPlannerBenchmark'
	if (providers.gradleProperty('plannerRecording').isPresent()) {
		args providers.gradleProperty('plannerRecording').get()
	}
}

tasks.named('jar') {
	archiveFileName.set('GenericClient-thin.jar')
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
	options.compilerArgs.addAll(['-Xlint:deprecation', '-Xlint:unchecked'])
}

jacoco {
	toolVersion = '0.8.12'
}

pmd {
	consoleOutput = true
	toolVersion = '7.25.0'
	ruleSets = []
	ruleSetFiles = files('config/pmd/ruleset.xml')
}

pitest {
	// Native input tests need the same AWT display as the ordinary test task.
	features = ['-macos_focus']
	targetClasses = providers.gradleProperty('pitestTargetClasses')
		.map { value -> value.split(',') as List }
		.getOrElse(['com.genericclient.*'])
	targetTests = providers.gradleProperty('pitestTargetTests')
		.map { value -> value.split(',') as List }
		.getOrElse(['com.genericclient.*'])
	threads = 4
	outputFormats = ['HTML', 'XML']
	timestampedReports = false
	timeoutConstInMillis = 10_000
	timeoutFactor = 2.0
}

tasks.named('test') {
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.withType(Pmd).configureEach {
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.register('qualityReport') {
	group = LifecycleBasePlugin.VERIFICATION_GROUP
	description = 'Runs tests, coverage reporting, and static analysis.'
	dependsOn tasks.named('test'), tasks.named('jacocoTestReport'),
		tasks.named('pmdMain'), tasks.named('pmdTest')
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.main.runtimeClasspath + configurations.standaloneRuntime
	mainClass = pluginMainClass

	jvmArgs "-ea"
	args "--debug"
}

tasks.register('denseRun', JavaExec) {
	group = LifecycleBasePlugin.APPLICATION_GROUP
	description = 'Runs the Linux dense GenericClient proof of concept.'
	classpath = sourceSets.main.runtimeClasspath + configurations.standaloneRuntime
	mainClass = denseMainClass
	jvmArgs '-ea', '-Dgenericclient.dense=true', '-Dgenericclient.controlPort=0'
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.runtimeClasspath, configurations.standaloneRuntime
	manifest {
		attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from {
		(configurations.runtimeClasspath + configurations.standaloneRuntime).collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set('GenericClient.jar')
}
